--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         padding: 10px;
       }
     </style>
+    <script type="module" src="main.js"></script>
   </head>
   <body>
     <div class="container">
@@ -33,8 +34,9 @@
       </div>
 
       <div id="list">
-        여기서 각 리스트 뿌려주기 <br /><br />
+
         <!-- 제목, 링크, 이미지, CP 를 표시해주세요  -->
+
 
         <!-- 로딩마크업: 로딩중일때만 표시 -->
         <div class="text-center">
@@ -46,5 +48,6 @@
         <button type="button" class="btn btn-default">더보기</button>
       </div>
     </div>
+
   </body>
 </html>
