--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <div>
         <ul class="nav nav-tabs">
           <!-- 선택된탭:선택된 탭에 .active    -->
-          <li class="active"><a href="#">최근</a></li>
-          <li><a href="#">많이본</a></li>
-          <li><a href="#">실시간인기</a></li>
+          <li class="recent active"><a href="#">최근</a></li>
+          <li class="popular"><a href="#">많이본</a></li>
+          <li class="view"><a href="#">실시간인기</a></li>
         </ul>
       </div>
 
