--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
       href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     />
     <style>
-      .list {
+      #list {
         margin: 10px;
         padding: 10px;
+        display: flex;
+        flex-wrap: wrap;
+      }
+      .card {
+        width: 200px;
       }
     </style>
     <script type="module" src="main.js"></script>
