--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       }
       .card {
         width: 200px;
+        margin: 10px;
       }
     </style>
     <script type="module" src="main.js"></script>
