--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <ul class="nav nav-tabs">
           <!-- 선택된탭:선택된 탭에 .active    -->
           <li class="recent active"><a href="#">최근</a></li>
-          <li class="popular"><a href="#">많이본</a></li>
-          <li class="view"><a href="#">실시간인기</a></li>
+          <li class="view"><a href="#">많이본</a></li>
+          <li class="popular"><a href="#">실시간인기</a></li>
         </ul>
       </div>
 
@@ -45,9 +45,9 @@
 
 
         <!-- 로딩마크업: 로딩중일때만 표시 -->
-        <div class="text-center">
-          <span class="glyphicon glyphicon-refresh"></span> 로딩중
-        </div>
+<!--        <div class="text-center">-->
+<!--          <span class="glyphicon glyphicon-refresh"></span> 로딩중-->
+<!--        </div>-->
       </div>
 
       <div class="text-center">
